[metadata]
# replace with your username:
name = jqpd
version = 0.0.1
author = Imran Khan
author_email = iakhan@utexas.edu
description = implementation of JQPD
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6